Updated onClicks and scoring mechanics ... still needs cleaning and updating to organization and layout.
Also still needs INTENT Calls and onRestore()

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,10 @@
         <activity android:name=".GameHasStarted"
             android:label="Scoring Menu"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
+        </activity>
+        <activity android:name=".HalfTime"
+            android:label="Half Time Menu"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
     </application>
 
